fix:fixed text overflow in specific genre

--- a/assets/css/specificGenre.css
+++ b/assets/css/specificGenre.css
@@ -1,8 +1,7 @@
-
 @import url(./main.css);
 
 .body {
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -60,6 +59,10 @@
 .playlist-title {
   font-size: 1em;
   margin-left: 10px;
+  max-width: 15ch;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .description {
@@ -69,6 +72,7 @@
   line-height: 1.5em;
   font-size: smaller;
   color: #888;
+  text-overflow: ellipsis;
   padding-top: 5px;
   box-sizing: border-box;
   padding-left: 10px;
